Fixing bug in edit-configuration.html Fixes bug #177.

--- a/vcweb/core/templates/experimenter/edit-configuration.html
+++ b/vcweb/core/templates/experimenter/edit-configuration.html
@@ -179,7 +179,7 @@
                     <h4 class="modal-title">Edit Details and Click Save</h4>
                 </div>
                 <div class="modal-body" data-bind="with: modalData" >
-                    <div data-bind='template: { name: $root.template }'></div>
+                    <div data-bind='template: { name: $root.template() }'></div>
                 </div>
             </div>
         </div>
