adding total daily earnings to UI when linear public good parameter is set
TODO: add running total across the entire experiment

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -84,7 +84,7 @@
 </div>
 </script>
 {{ block.super }}
-<script type='text/javascript'>
+<script>
     var viewModelObject = $.parseJSON("{{ dashboardViewModelJson|escapejs }}");
     $(function() {
         function DashboardViewModel(viewModelObject) {
