--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class='col-md-3 left-divider'>
                     <h5 id='group-score'><span class='lighterprints-scoreboard-uppercase'>Group Score</span></h5>
-                    <table style='margin-top: -37px;'>
+                    <table class='lighterprints-scoreboard'>
                         <tr>
                             <td class='lighterprints-scoreboard-xlarge'><span class='lighterprints-blue' data-bind='text: averagePoints'></span></td>
                             <td class='lighterprints-scoreboard-large'> / </td>
@@ -95,7 +95,7 @@
                 </div>
                 <div class='col-md-3 left-divider'>
                     <h5 id='time-remaining'><span class='lighterprints-scoreboard-uppercase'>Time Remaining</span></h5>
-                    <table style='margin-top: -37px;'>
+                    <table class='lighterprints-scoreboard'>
                         <tr>
                             <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: hoursLeft'></span>h</td>
                             <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: minutesLeft'></span>m</td>
