marking more view methods explicitly with transaction.atomic

--- a/vcweb/core/templates/participant/dashboard.html
+++ b/vcweb/core/templates/participant/dashboard.html
@@ -77,7 +77,7 @@ Participant Dashboard
 <div class='alert alert-warning alert-block'>
     <a data-bind='attr: { href: participant_url }'><i class='fa fa-play'></i> <span data-bind='text: name'></span>
     <span data-bind='if: start_date'>
-    <span class='pull-right'><b>Experiment will start on <span data-bind='text: $root.formatDate(start_date())'></span></b> at midnight</i></span>
+    <span class='pull-right'><b>Experiment starts on <span data-bind='text: $root.formatDate(start_date())'></span></b> at midnight</i></span>
     </span>
     </a>
 </div>
