--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -26,7 +26,7 @@
         <h2>Acknowledgements</h2>
         <div>
             The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
-            (BCS 0625354 and SES 0748632) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
+            (BCS 0625354, SES 0748632, IIS 1210856) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
             and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
         </div>
     </div>
