--- a/vcweb/subject_pool/templates/subject-pool/experiment-session-signup.html
+++ b/vcweb/subject_pool/templates/subject-pool/experiment-session-signup.html
@@ -11,7 +11,7 @@ Signup for an Experiment Session
         <div id="content" class="col-md-12">
             {% for exp in grouped_invitations %}
             <div class="callout callout-info">
-                <form method="POST" action="">
+                <form method="POST" action='{% url "subject_pool:submit_experiment_session_signup" %}'>
                 <input type="hidden" name="experiment_metadata_pk" value={{ exp.list.0.experiment_metadata_pk }}  />
                 <legend>Experiment Session Signup</legend>
                 <table class="table table-striped">
@@ -51,9 +51,9 @@ Signup for an Experiment Session
                             <tr>
                                 <td>
                                     {% if item.invitation.selected == True %}
-                                        <input type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} checked />
+                                        <input type="radio" value= {{ item.invitation.invitation_pk }} name="invitation_pk" checked />
                                     {% else %}
-                                        <input type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} />
+                                        <input type="radio" value= {{ item.invitation.invitation_pk }} name="invitation_pk" />
                                     {% endif %}
                                 </td>
                                 <td> {{ item.invitation.scheduled_date }}</td>
@@ -69,9 +69,9 @@ Signup for an Experiment Session
                             <tr class="error-row">
                                 <td>
                                    {% if item.invitation.selected == True %}
-                                        <input type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} checked />
+                                        <input type="radio" value= {{ item.invitation.invitation_pk }} name="invitation_pk" checked />
                                    {% else %}
-                                        <input disabled type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} />
+                                        <input disabled type="radio" value= {{ item.invitation.invitation_pk }} name="invitation_pk" />
                                     {% endif %}
                                 </td>
                                 <td> {{ item.invitation.scheduled_date }}</td>
